crates/voom-cli/tests/snapshots/scan_envelope__scan_blocked_root_emits_blocked_envelope.snap
---
source: crates/voom-cli/tests/scan_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scan",
  "status": "error",
  "data": {
    "status": "blocked",
    "reason": "root_disabled",
    "library_id": 9000001,
    "storage_root_id": 9000001,
    "provider_locator": "[provider-locator]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "BLOCKED",
    "message": "library root 9000001 is blocked (root_disabled); scan not requested"
  }
}
