crates/voom-cli/tests/snapshots/scan_envelope__scan_directory_reports_unsupported_file_as_skipped.snap
---
source: crates/voom-cli/tests/scan_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scan",
  "status": "ok",
  "data": {
    "path": "[scan-dir]",
    "mode": "directory",
    "summary": {
      "discovered": 1,
      "ingested": 0,
      "probed": 0,
      "snapshots_recorded": 0,
      "hardlinked": 0,
      "skipped": 1,
      "failed": 0
    },
    "files": [],
    "skipped": [
      {
        "path": "[scan-dir]/note.txt",
        "status": "skipped_unsupported_extension"
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [
    "VOOM_FFPROBE_BIN is set; scan ffprobe binary: [ffprobe-bin]"
  ],
  "error": null
}
