crates/voom-cli/tests/snapshots/scan_envelope__scan_reuses_builtin_ffprobe_worker_row.snap
---
source: crates/voom-cli/tests/scan_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scan",
  "status": "ok",
  "data": {
    "path": "[media]",
    "mode": "directory",
    "summary": {
      "discovered": 1,
      "ingested": 1,
      "probed": 1,
      "snapshots_recorded": 1,
      "hardlinked": 0,
      "skipped": 0,
      "failed": 0
    },
    "files": [
      {
        "path": "[media]/tiny.mp4",
        "status": "scanned",
        "file_asset_id": 1,
        "file_version_id": 1,
        "file_location_id": 1,
        "content_hash": "[content-hash]",
        "size_bytes": 1545,
        "probe_worker_id": 1
      }
    ],
    "skipped": []
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [
    "VOOM_FFPROBE_BIN is set; scan ffprobe binary: [ffprobe-bin]"
  ],
  "error": null
}
